--- a/template.yaml
+++ b/template.yaml
@@ -36,7 +36,7 @@ Resources:
   StudentTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: student-new
+      TableName: student-new-git
       AttributeDefinitions:
         - 
           AttributeName: student_id
