--- a/template.yaml
+++ b/template.yaml
@@ -10,8 +10,8 @@ Globals:
     Timeout: 30
     MemorySize: 128
 
-    LoggingConfig:
-      LogFormat: JSON
+    # LoggingConfig:
+    #   LogFormat: JSON
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function
