adding sam definition

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -11,7 +11,7 @@ on:
 
 env:
   SAM_TEMPLATE: template.yaml
-  TESTING_STACK_NAME: student-api-git-dev
+  TESTING_STACK_NAME: sam-appdev
   TESTING_PIPELINE_EXECUTION_ROLE: arn:aws:iam::206920332470:role/aws-sam-cli-managed-dev-pipel-PipelineExecutionRole-FLVrJwh136BR
   TESTING_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::206920332470:role/aws-sam-cli-managed-dev-p-CloudFormationExecutionRo-p9XysujiQ9id
   TESTING_ARTIFACTS_BUCKET: aws-sam-cli-managed-dev-pipeline-r-artifactsbucket-xjxa106uq6gm
@@ -20,7 +20,7 @@ env:
   # testing "sam package" and "sam deploy" commands.
   # TESTING_IMAGE_REPOSITORY = '0123456789.dkr.ecr.region.amazonaws.com/repository-name'
   TESTING_REGION: us-east-1
-  PROD_STACK_NAME: student-api-git-prod
+  PROD_STACK_NAME: sam-appprod
   PROD_PIPELINE_EXECUTION_ROLE: arn:aws:iam::206920332470:role/aws-sam-cli-managed-prod-pipe-PipelineExecutionRole-saVNM7yXbcVW
   PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::206920332470:role/aws-sam-cli-managed-prod--CloudFormationExecutionRo-Wwo3fE2IeEXD
   PROD_ARTIFACTS_BUCKET: aws-sam-cli-managed-prod-pipeline--artifactsbucket-nia6mmpwn8kj
